# django-app

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.env  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  pytest.sh  requirements.txt
accounts/: urls.py  views.py
accounts/serializers/: validation_serializers.py
accounts/services/: __init__.py  change_password_service.py  sign_in_service.py  sign_out_service.py  sign_up_service.py
authorization/: models.py  tokens.py  urls.py  views.py
authorization/migrations/: 0001_initial.py
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_time.py  0002_initial.py  0003_alter_booking_experience_alter_booking_room_and_more.py  0003_initial.py  0004_initial.py
bookings/serializers/: __init__.py  (+2 more)
categories/: admin.py  models.py  serializers.py  urls.py  views.py
common/: base_helper.py  models.py  utils.py
config/: authentication.py  pagination.py  s3.py  schema.py  settings.py  urls.py  utils.py
direct_messages/: admin.py  models.py
dms/: admin.py  models.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  models.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
tests/: conftest.py  factories.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+109 files in other folders)
